{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 176,
  "lineage": "28e56bcd-f6a3-5736-e3fd-9de013a9cf86",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "web_backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/zones/us-central1-c/instanceGroups/web-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-12-03T16:49:09.570-08:00",
            "enable_cdn": false,
            "fingerprint": "2ErpJcIV2RI=",
            "generated_id": 3039120858889938026,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/global/healthChecks/http-basic-check"
            ],
            "id": "projects/cis-91-nkinney/global/backendServices/web-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-backend-service",
            "port_name": "http",
            "project": "cis-91-nkinney",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/global/backendServices/web-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.http_health_check",
            "google_compute_instance.web_instance",
            "google_compute_instance_group.web_instance_group",
            "google_compute_network.vpc_network",
            "google_service_account.vm_service_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-03T16:29:35.947-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cis-91-nkinney/global/firewalls/allow-db",
            "log_config": [],
            "name": "allow-db",
            "network": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/global/networks/terraform-network",
            "priority": 1000,
            "project": "cis-91-nkinney",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/global/firewalls/allow-db",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "web"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "db"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-db-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-03T16:29:35.774-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cis-91-nkinney/global/firewalls/allow-db-ssh",
            "log_config": [],
            "name": "allow-db-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/global/networks/terraform-network",
            "priority": 1000,
            "project": "cis-91-nkinney",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/global/firewalls/allow-db-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "db"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http-ssh-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-03T16:29:35.955-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cis-91-nkinney/global/firewalls/allow-http-ssh-https",
            "log_config": [],
            "name": "allow-http-ssh-https",
            "network": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/global/networks/terraform-network",
            "priority": 1000,
            "project": "cis-91-nkinney",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/global/firewalls/allow-http-ssh-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/cis-91-nkinney/global/forwardingRules/http-lb-forwarding-rule",
            "ip_address": "34.54.91.19",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-lb-forwarding-rule",
            "port_range": "80-80",
            "project": "cis-91-nkinney",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/global/forwardingRules/http-lb-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/global/targetHttpProxies/http-lb-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.web_backend_service",
            "google_compute_health_check.http_health_check",
            "google_compute_instance.web_instance",
            "google_compute_instance_group.web_instance_group",
            "google_compute_network.vpc_network",
            "google_compute_target_http_proxy.http_lb",
            "google_compute_url_map.http_lb",
            "google_service_account.vm_service_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "attached_disk": [
              {
                "device_name": "data-disk",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/zones/us-central1-c/disks/data-disk"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251111",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/zones/us-central1-c/disks/db-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/cis-91-nkinney/zones/us-central1-c/instances/db-instance",
            "instance_id": "7362064987740531487",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "M_5PtPJFeow=",
            "name": "db-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.70.112.141",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/global/networks/terraform-network",
                "network_ip": "10.128.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/regions/us-central1/subnetworks/terraform-network",
                "subnetwork_project": "cis-91-nkinney"
              }
            ],
            "project": "cis-91-nkinney",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/zones/us-central1-c/instances/db-instance",
            "service_account": [
              {
                "email": "vm-service-account@cis-91-nkinney.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "db"
            ],
            "tags_fingerprint": "iLlpKeTIHqY=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_disk.data_disk",
            "google_compute_network.vpc_network",
            "google_service_account.vm_service_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251111",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/zones/us-central1-c/disks/web-instance-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/cis-91-nkinney/zones/us-central1-c/instances/web-instance-0",
            "instance_id": "3122959466616417055",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "M_5PtPJFeow=",
            "name": "web-instance-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.55.244.71",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/global/networks/terraform-network",
                "network_ip": "10.128.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/regions/us-central1/subnetworks/terraform-network",
                "subnetwork_project": "cis-91-nkinney"
              }
            ],
            "project": "cis-91-nkinney",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/zones/us-central1-c/instances/web-instance-0",
            "service_account": [
              {
                "email": "vm-service-account@cis-91-nkinney.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "web"
            ],
            "tags_fingerprint": "3d9fNIIa_10=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_service_account.vm_service_account"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251111",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/zones/us-central1-c/disks/web-instance-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/cis-91-nkinney/zones/us-central1-c/instances/web-instance-1",
            "instance_id": "6089505356627404207",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "M_5PtPJFeow=",
            "name": "web-instance-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.31.180.10",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/global/networks/terraform-network",
                "network_ip": "10.128.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/regions/us-central1/subnetworks/terraform-network",
                "subnetwork_project": "cis-91-nkinney"
              }
            ],
            "project": "cis-91-nkinney",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/zones/us-central1-c/instances/web-instance-1",
            "service_account": [
              {
                "email": "vm-service-account@cis-91-nkinney.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "web"
            ],
            "tags_fingerprint": "3d9fNIIa_10=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_service_account.vm_service_account"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251111",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/zones/us-central1-c/disks/web-instance-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/cis-91-nkinney/zones/us-central1-c/instances/web-instance-2",
            "instance_id": "8219910595455837615",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "M_5PtPJFeow=",
            "name": "web-instance-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.121.138.251",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/global/networks/terraform-network",
                "network_ip": "10.128.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/regions/us-central1/subnetworks/terraform-network",
                "subnetwork_project": "cis-91-nkinney"
              }
            ],
            "project": "cis-91-nkinney",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/zones/us-central1-c/instances/web-instance-2",
            "service_account": [
              {
                "email": "vm-service-account@cis-91-nkinney.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "web"
            ],
            "tags_fingerprint": "3d9fNIIa_10=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_service_account.vm_service_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/cis-91-nkinney/global/networks/terraform-network",
            "mtu": 0,
            "name": "terraform-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "5209341114567191337",
            "project": "cis-91-nkinney",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/global/networks/terraform-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-03T16:50:23.017-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/cis-91-nkinney/global/targetHttpProxies/http-lb-proxy",
            "name": "http-lb-proxy",
            "project": "cis-91-nkinney",
            "proxy_bind": false,
            "proxy_id": 6316735476210164769,
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/global/targetHttpProxies/http-lb-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/global/urlMaps/http-lb-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.web_backend_service",
            "google_compute_health_check.http_health_check",
            "google_compute_instance.web_instance",
            "google_compute_instance_group.web_instance_group",
            "google_compute_network.vpc_network",
            "google_compute_url_map.http_lb",
            "google_service_account.vm_service_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "http_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-03T16:50:11.566-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/global/backendServices/web-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "JjliALKcFbA=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/cis-91-nkinney/global/urlMaps/http-lb-url-map",
            "map_id": 6319829042369225772,
            "name": "http-lb-url-map",
            "path_matcher": [],
            "project": "cis-91-nkinney",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-nkinney/global/urlMaps/http-lb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.web_backend_service",
            "google_compute_health_check.http_health_check",
            "google_compute_instance.web_instance",
            "google_compute_instance_group.web_instance_group",
            "google_compute_network.vpc_network",
            "google_service_account.vm_service_account"
          ]
        }
      ]
    }
  ]
}